clusters/cl01tl/manifests/yamtrack/HTTPRoute-http-route-yamtrack.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-yamtrack
  namespace: yamtrack
  labels:
    app.kubernetes.io/name: http-route-yamtrack
    app.kubernetes.io/instance: yamtrack
    app.kubernetes.io/part-of: yamtrack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - yamtrack.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: yamtrack
          port: 80
          weight: 100
